k8s-kubeadm/07-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-tutorial
  namespace: django-tutorial
  labels:
    app: django-tutorial
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-tutorial
      tier: frontend
  template:
    metadata:
      labels:
        app: django-tutorial
        tier: frontend
    spec:
      containers:
      - name: django-container
        image: f1rul4yx/django_tutorial:latest
        ports:
        - name: http-server
          containerPort: 8000
